welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-0 to T.lenght-nb-1){
                ^Array2:23: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-(T.lenght-1-nb) to T.lenght-1-(T.lenght-1-nb)){
            ^Array2:23: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-(T.lenght-1-nb) to T.lenght-1-(T.lenght-1-nb)){
                              ^Array2:23: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-(T.lenght-1-nb) to T.lenght-1-(T.lenght-1-nb)){
                                          ^